# ibus_ez

./: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  configure~  copy.py  csvCopy.txt  dict.cpp  en_dict.csv  en_dictpk.csv  en_dictpp.csv  func.h  hello.c  note.txt  outCsv.csv  outCsv_1.csv  outCsv_3.csv  outCsv_3_modified.csv  readCsv  readCsv.cpp  readcsv  text.txt
.deps/: hello.Po
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.4  traces.5
src/: Makefile  Makefile.am  Makefile.in  dbus_test.c  dict.cpp  dict.h  en_buffer.cpp  en_buffer.h  engine.cpp  engine.h  ez.xml  ez.xml.in.in  func.cpp  hello.cpp  helloWorld  ibus-engine-ez  preprossed.cpp
src/.deps/: func.Po  hello.Po  helloWorld-engine.Po  helloWorld-func.Po  helloWorld-hello.Po  ibus_engine_ez-dict.Po  ibus_engine_ez-en_buffer.Po  ibus_engine_ez-engine.Po  ibus_engine_ez-hello.Po
src/dbus_test/: dbus_test  dbus_test.c  makefile  test.txt
